FTT-020 Session add finish. Rewrite Backend ActivitySession relations